syntax = "proto3";

import "grpcreplica.proto";

package replica;

service GrpcClient {
  rpc ReplyProposeTS(ProposalReplyTS) returns (Empty) {}
}
